--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ function submitForm(event) {
 
     </div>
 	<div class="banner3">
-        <img src="c:\Users\Asmath.Fahima\OneDrive - RTC Education Ltd\Level 3-Website Development\Solution\1.jpg" width="100%" height="600px" >
+        <img src="https://github.com/AsmathFahima2023/AsmathFahima2023.github.io/blob/fdc2326498117d92e1e9d64f2def56d4e2f2fd31/1.jpg" width="100%" height="600px" >
             <div class="banner4">
 			   <p class="p1"><br><br>HELLO !<br> <br>Welcome to our world of exceptional events, 
                 where unforgettable moments come to life.Whether you're planning a grand celebration or an intimate gathering, 
