--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ function submitForm(event) {
 
     </div>
 	<div class="banner3">
-        <img src="./images/1.jpg" width="100%" height="600px" >
+        <img src="images/1.jpg" width="100%" height="600px" >
             <div class="banner4">
 			   <p class="p1"><br><br>HELLO !<br> <br>Welcome to our world of exceptional events, 
                 where unforgettable moments come to life.Whether you're planning a grand celebration or an intimate gathering, 
