--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ function submitForm(event) {
 	
 	<div class="banner2">
 	         <div class="dropdown">
-            <button class="dropbtn">Home</button>
+            <button class="dropbtn">He</button>
 			</div>
 	        <div class="dropdown">
             <button class="dropbtn">Themed Events</button>
