--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ function submitForm(event) {
             <button class="dropbtn">He</button>
 			</div>
 	        <div class="dropdown">
-            <button class="dropbtn">Themed Events</button>
+            <button class="dropbtn">TEvents</button>
 			</div>
 			 <div class="dropdown">
             <button class="dropbtn">Marquee Parties</button>
