--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@ function submitForm(event) {
 	
 	<div class="banner2">
 	         <div class="dropdown">
-            <button class="dropbtn">He</button>
+            <button class="dropbtn">Home</button>
 			</div>
 	        <div class="dropdown">
-            <button class="dropbtn">TEvents</button>
+            <button class="dropbtn">Themed Events</button>
 			</div>
 			 <div class="dropdown">
             <button class="dropbtn">Marquee Parties</button>
@@ -157,9 +157,9 @@ o Hot and Cold buffet and soft drinks.
     <div class="footer-social">
         <h3 style="color:white;">Follow Us</h3>
         <ul>
-            <li><a href="#"><img src="C:\Users\Asmath.Fahima\OneDrive - RTC Education Ltd\Level 3-Website Development\Solution\58e91965eb97430e819064f5.png" alt="Facebook"></a></li>
-            <li><a href="#"><img src="C:\Users\Asmath.Fahima\OneDrive - RTC Education Ltd\Level 3-Website Development\Solution\3670151.png" alt="Twitter"></a></li>
-            <li><a href="#"><img src="C:\Users\Asmath.Fahima\OneDrive - RTC Education Ltd\Level 3-Website Development\Solution\pngtree-instagram-icon-png-image_6315974.png" alt="Instagram"></a></li>
+            <li><a href="#"><img src="images\58e91965eb97430e819064f5.png" alt="Facebook"></a></li>
+            <li><a href="#"><img src="images\3670151.png" alt="Twitter"></a></li>
+            <li><a href="#"><img src="images\pngtree-instagram-icon-png-image_6315974.png" alt="Instagram"></a></li>
         </ul>
 		<div class="footer-address">
         <p class="p6"style="color:white;">EventWorld<br>Block 4,<br>Dubai Knowledge Park,<br>Al Sufouh 2,Dubai<br>United Arab Emirates</p>
