--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ function submitForm(event) {
 	<div class="banner3">
         <img src="images/1.jpg" width="100%" height="600px" >
             <div class="banner4">
-			   <p class="p1"><br><br>HELLO !<br> <br>Welcome to our world of exceptional events, 
+			   <p class="p1"><br><br>HELLOooo !<br> <br>Welcome to our world of exceptional events, 
                 where unforgettable moments come to life.Whether you're planning a grand celebration or an intimate gathering, 
                 our team of dedicated professionals is here to make your dreams a reality. <br>
                 Scroll below to check the packages and begin crafting the perfect event for your cherished moments.</p>
